API binance, new routes, openapi, new postgres table
